# performance-benchmarks

./: CMakeLists.txt  README.md
1.pythagoras/: CMakeLists.txt  main.cpp  oop_triangle.cpp  oop_triangle.h  soa_triangle.cpp  soa_triangle.h
10.uni/: CMakeLists.txt  main.cpp
11.student_challange/: CMakeLists.txt  main.cpp
12.profiler/: CMakeLists.txt  main.cpp
13.goto/: CMakeLists.txt  main.cpp
14.std/: CMakeLists.txt  main.cpp
15.sync/: CMakeLists.txt  main.cpp
16.practice/: CMakeLists.txt  main.cpp
17.practice2/: CMakeLists.txt  main.cpp
18.conditionals/: CMakeLists.txt  main.cpp
19.alignment/: CMakeLists.txt  main.cpp
2.inventory/: CMakeLists.txt  item.cpp  item.h  main.cpp  soa.cpp  soa.h
20.practice3/: CMakeLists.txt  main.cpp
21.data/: Baseline.cpp  Baseline.h  CMakeLists.txt  common_types.h  main.cpp
21.data/test_data/: items.h  order_items.h  orders.h
22.threaded_queues/: CMakeLists.txt  main.cpp
3.caching/: CMakeLists.txt  main.cpp  part_main.cpp
4.str_to_int/: CMakeLists.txt  main.cpp
5.allocation/: CMakeLists.txt  alloc.cpp  alloc.h  alloc_empty.cpp  main.cpp
6.interview/: CMakeLists.txt  main.cpp
7.threads/: CMakeLists.txt  main.cpp
8.bad_things/: 1.more_is_better.cpp  1.more_is_better.h  10.class_exmp.cpp  10.class_exmp.h  3.dependency.cpp  3.dependency.h  3.free_functions.cpp  3.free_functions.h  3.pointers.cpp  3.pointers.h  4.non_poly.cpp  4.non_poly.h  4.poly_a_class.cpp  4.poly_a_class.h  4.poly_b_class.cpp  4.poly_b_class.h  4.poly_interface.h  5.multi_inheritance.h  5.multi_inheritance_a.cpp  5.multi_inheritance_b.cpp  5.print_scan.cpp  5.print_scan.h  7.pimpl_exmp.cpp  7.pimpl_exmp.h  CMakeLists.txt  main.cpp
9.complex/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
libdivide/: CMakeLists.txt
libdivide/test/: benchmark_branchfree.cpp
